Restructured files. Created file with code for cleaning up raw data.

--- a/download_data.ipynb
+++ b/download_data.ipynb
@@ -9,6 +9,7 @@
    "source": [
     "import urllib.request\n",
     "import time\n",
+    "import helpful_functions\n",
     "from os import path"
    ]
   },
@@ -40,20 +41,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def to_date_str(date_arr):\n",
-    "    year = str(date_arr[0])\n",
-    "    month = ('0' + str(date_arr[1]))[-2:]\n",
-    "    return year + '/' + month\n",
-    "\n",
-    "def add_month(date_str):\n",
-    "    date_arr = [int(i) for i in date_str.split('/')]\n",
-    "    if date_arr[1] != 12:\n",
-    "        date_arr[1] += 1\n",
-    "    else:\n",
-    "        date_arr[1] = 1\n",
-    "        date_arr[0] += 1\n",
-    "    return to_date_str(date_arr)\n",
-    "\n",
     "def download_file(download_url, filename):\n",
     "    response = urllib.request.urlopen(download_url)    \n",
     "    file = open(filename, 'wb')\n",
@@ -69,18 +56,12 @@
    "outputs": [],
    "source": [
     "# generate all possible month-year combinations within the selected period\n",
-    "cur_date_str = to_date_str([start_year, start_month])\n",
-    "end_date_str = to_date_str([end_year, end_month])\n",
-    "dates_str_list = list()\n",
-    "if cur_date_str == end_date_str:\n",
-    "    dates_str_list = [cur_date_str]\n",
-    "else:\n",
-    "    while True:\n",
-    "        dates_str_list.append(cur_date_str)\n",
-    "        cur_date_str = add_month(cur_date_str)\n",
-    "        if cur_date_str == end_date_str:\n",
-    "            dates_str_list.append(cur_date_str)\n",
-    "            break\n"
+    "dates_str_list = helpful_functions.generate_months_in_period(\n",
+    "    start_month=start_month, \n",
+    "    start_year=start_year, \n",
+    "    end_month=end_month, \n",
+    "    end_year=end_year, \n",
+    "    sep=\"/\")"
    ]
   },
   {
