Downloaded and transformed data for 3 cities. Uploaded as 3 separate .csv files: clear data, outliers, stations for each city. Outlier rule: duration > 24 h -> bike was stolen - business rules.

--- a/download_data.ipynb
+++ b/download_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "064fc363",
    "metadata": {},
    "outputs": [],
@@ -15,28 +15,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "4dc84721",
    "metadata": {},
    "outputs": [],
    "source": [
     "# fill next few rows with actual info\n",
     "# by defalut, will be downloaded for Oslo, all existing data (since 2019-04 till 2022-06) into folder ./data.\n",
-    "city_name = 'oslo'        # можливі варіанти: olso, bergen, trondheim\n",
+    "city_name = 'trondheim'        # можливі варіанти: olso, bergen, trondheim\n",
     "\n",
     "start_month = 4           # 1 - 12\n",
-    "start_year = 2019         # 2019 - 2022\n",
+    "start_year = 2022         # 2019 - 2022\n",
     "\n",
     "end_month = 6             # 1 - 12\n",
     "end_year = 2022           # 2019 - 2022\n",
     "\n",
-    "destination_folder = '../data'\n",
+    "destination_folder = './data'\n",
     "# end filling"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "7ce5383b",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "df310b6d",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time:  303.14677715301514  s\n"
+      "in progres:  trondheim_2022_04\n",
+      "in progres:  trondheim_2022_05\n",
+      "in progres:  trondheim_2022_06\n",
+      "Time:  2.849416971206665  s\n"
      ]
     }
    ],
