--- a/transform_raw_data.ipynb
+++ b/transform_raw_data.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "id": "670b43b4",
    "metadata": {},
    "outputs": [],
@@ -28,15 +28,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "id": "cc3750e8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_name = 'oslo'        # можливі варіанти: olso, bergen, trondheim\n",
+    "city_name = 'trondheim'        # можливі варіанти: olso, bergen, trondheim\n",
     "\n",
-    "start_month = 4           # 1 - 12\n",
-    "start_year = 2019         # 2019 - 2022\n",
+    "start_month = 5           # 1 - 12\n",
+    "start_year = 2018         # 2019 - 2022\n",
     "\n",
     "end_month = 6             # 1 - 12\n",
     "end_year = 2022           # 2019 - 2022\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "id": "f9d9316b",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "id": "ab949bad",
    "metadata": {},
    "outputs": [
@@ -69,17 +69,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Зчитування:  44.2213351726532 с. \n",
+      "Зчитування:  6.321700096130371 с. \n",
       "\n",
-      "Розмір початкової таблиці:  (5833647, 13)\n"
+      "Розмір початкової таблиці:  (781422, 13)\n"
      ]
     }
    ],
    "source": [
     "start = time.time()\n",
-    "df = pd.read_csv(f\"{data_folder}/{city_name}_{dates_str_list[0]}.csv\")\n",
+    "df = pd.read_csv(f\"{data_folder}/{city_name}/{city_name}_{dates_str_list[0]}.csv\")\n",
     "for date in dates_str_list[1:]:\n",
-    "    df = pd.concat([df, pd.read_csv(f\"{data_folder}/{city_name}_{date}.csv\")])\n",
+    "    try:\n",
+    "        df = pd.concat([df, pd.read_csv(f\"{data_folder}/{city_name}/{city_name}_{date}.csv\")])\n",
+    "    except:\n",
+    "        pass\n",
     "end = time.time()\n",
     "print(\"Зчитування: \", end - start, \"с. \\n\")\n",
     "print(\"Розмір початкової таблиці: \", df.shape)"
@@ -87,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "id": "63733820",
    "metadata": {},
    "outputs": [
@@ -95,7 +98,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Трансформування:  217.26721382141113 с.\n"
+      "Трансформування:  34.44571495056152 с.\n"
      ]
     },
     {
@@ -139,93 +142,93 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2019-04-02 22:18:47.926000+00:00</td>\n",
-       "      <td>2019-04-02 22:24:25.427000+00:00</td>\n",
-       "      <td>337</td>\n",
-       "      <td>401</td>\n",
-       "      <td>Schous plass</td>\n",
-       "      <td>nærmest Thorvald Meyers gate</td>\n",
-       "      <td>59.920259</td>\n",
-       "      <td>10.760629</td>\n",
-       "      <td>381</td>\n",
-       "      <td>Grønlands torg</td>\n",
-       "      <td>ved Tøyenbekken</td>\n",
-       "      <td>59.91252</td>\n",
-       "      <td>10.76224</td>\n",
-       "      <td>2019-04-03 00:18:47+02:00</td>\n",
-       "      <td>2019-04-03 00:24:25+02:00</td>\n",
+       "      <td>2018-05-15 09:07:43.961000+00:00</td>\n",
+       "      <td>2018-05-15 09:10:33.267000+00:00</td>\n",
+       "      <td>169</td>\n",
+       "      <td>28</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td>63.430457</td>\n",
+       "      <td>10.398101</td>\n",
+       "      <td>35</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td>63.432504</td>\n",
+       "      <td>10.400387</td>\n",
+       "      <td>2018-05-15 11:07:43+02:00</td>\n",
+       "      <td>2018-05-15 11:10:33+02:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2019-04-02 22:25:54.203000+00:00</td>\n",
-       "      <td>2019-04-02 22:27:36.114000+00:00</td>\n",
-       "      <td>101</td>\n",
-       "      <td>556</td>\n",
-       "      <td>Pilestredet</td>\n",
-       "      <td>ved Sporveisgata</td>\n",
-       "      <td>59.926224</td>\n",
-       "      <td>10.729625</td>\n",
-       "      <td>556</td>\n",
-       "      <td>Pilestredet</td>\n",
-       "      <td>ved Sporveisgata</td>\n",
-       "      <td>59.926224</td>\n",
-       "      <td>10.729625</td>\n",
-       "      <td>2019-04-03 00:25:54+02:00</td>\n",
-       "      <td>2019-04-03 00:27:36+02:00</td>\n",
+       "      <td>2018-05-15 09:07:51.044000+00:00</td>\n",
+       "      <td>2018-05-15 09:10:34.085000+00:00</td>\n",
+       "      <td>163</td>\n",
+       "      <td>28</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td>63.430457</td>\n",
+       "      <td>10.398101</td>\n",
+       "      <td>35</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td>63.432504</td>\n",
+       "      <td>10.400387</td>\n",
+       "      <td>2018-05-15 11:07:51+02:00</td>\n",
+       "      <td>2018-05-15 11:10:34+02:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2019-04-02 22:26:39.308000+00:00</td>\n",
-       "      <td>2019-04-02 22:31:59.445000+00:00</td>\n",
-       "      <td>320</td>\n",
-       "      <td>561</td>\n",
-       "      <td>Kirkeveien</td>\n",
-       "      <td>nord for Gørbitz' gate</td>\n",
-       "      <td>59.933558</td>\n",
-       "      <td>10.726426</td>\n",
-       "      <td>471</td>\n",
-       "      <td>Marienlyst</td>\n",
-       "      <td>i Suhms gate</td>\n",
-       "      <td>59.932454</td>\n",
-       "      <td>10.721769</td>\n",
-       "      <td>2019-04-03 00:26:39+02:00</td>\n",
-       "      <td>2019-04-03 00:31:59+02:00</td>\n",
+       "      <td>2018-05-15 09:10:50.177000+00:00</td>\n",
+       "      <td>2018-05-15 09:15:33.270000+00:00</td>\n",
+       "      <td>283</td>\n",
+       "      <td>35</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td>63.432504</td>\n",
+       "      <td>10.400387</td>\n",
+       "      <td>66</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td>63.435277</td>\n",
+       "      <td>10.405814</td>\n",
+       "      <td>2018-05-15 11:10:50+02:00</td>\n",
+       "      <td>2018-05-15 11:15:33+02:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2019-04-03 03:09:58.992000+00:00</td>\n",
-       "      <td>2019-04-03 03:12:00.589000+00:00</td>\n",
-       "      <td>121</td>\n",
-       "      <td>393</td>\n",
-       "      <td>Hans Nielsen Hauges plass</td>\n",
-       "      <td>Mellom Åsengata og Nordkappgata</td>\n",
-       "      <td>59.939244</td>\n",
-       "      <td>10.774319</td>\n",
-       "      <td>393</td>\n",
-       "      <td>Hans Nielsen Hauges plass</td>\n",
-       "      <td>Mellom Åsengata og Nordkappgata</td>\n",
-       "      <td>59.939244</td>\n",
-       "      <td>10.774319</td>\n",
-       "      <td>2019-04-03 05:09:58+02:00</td>\n",
-       "      <td>2019-04-03 05:12:00+02:00</td>\n",
+       "      <td>2018-05-15 09:11:28.089000+00:00</td>\n",
+       "      <td>2018-05-15 09:15:34.746000+00:00</td>\n",
+       "      <td>246</td>\n",
+       "      <td>35</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td>63.432504</td>\n",
+       "      <td>10.400387</td>\n",
+       "      <td>66</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td>63.435277</td>\n",
+       "      <td>10.405814</td>\n",
+       "      <td>2018-05-15 11:11:28+02:00</td>\n",
+       "      <td>2018-05-15 11:15:34+02:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2019-04-03 03:10:02.415000+00:00</td>\n",
-       "      <td>2019-04-03 03:14:44.537000+00:00</td>\n",
-       "      <td>282</td>\n",
-       "      <td>597</td>\n",
-       "      <td>Fredensborg</td>\n",
-       "      <td>ved rundkjøringen</td>\n",
-       "      <td>59.920995</td>\n",
-       "      <td>10.750358</td>\n",
-       "      <td>557</td>\n",
-       "      <td>Akersgata</td>\n",
-       "      <td>ved Grensen</td>\n",
-       "      <td>59.914197</td>\n",
-       "      <td>10.742883</td>\n",
-       "      <td>2019-04-03 05:10:02+02:00</td>\n",
-       "      <td>2019-04-03 05:14:44+02:00</td>\n",
+       "      <td>2018-05-15 09:14:21.231000+00:00</td>\n",
+       "      <td>2018-05-15 09:15:32.835000+00:00</td>\n",
+       "      <td>71</td>\n",
+       "      <td>35</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td>63.432504</td>\n",
+       "      <td>10.400387</td>\n",
+       "      <td>35</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td>63.432504</td>\n",
+       "      <td>10.400387</td>\n",
+       "      <td>2018-05-15 11:14:21+02:00</td>\n",
+       "      <td>2018-05-15 11:15:32+02:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -233,49 +236,42 @@
       ],
       "text/plain": [
        "                         started_at                          ended_at  \\\n",
-       "0  2019-04-02 22:18:47.926000+00:00  2019-04-02 22:24:25.427000+00:00   \n",
-       "1  2019-04-02 22:25:54.203000+00:00  2019-04-02 22:27:36.114000+00:00   \n",
-       "2  2019-04-02 22:26:39.308000+00:00  2019-04-02 22:31:59.445000+00:00   \n",
-       "3  2019-04-03 03:09:58.992000+00:00  2019-04-03 03:12:00.589000+00:00   \n",
-       "4  2019-04-03 03:10:02.415000+00:00  2019-04-03 03:14:44.537000+00:00   \n",
+       "0  2018-05-15 09:07:43.961000+00:00  2018-05-15 09:10:33.267000+00:00   \n",
+       "1  2018-05-15 09:07:51.044000+00:00  2018-05-15 09:10:34.085000+00:00   \n",
+       "2  2018-05-15 09:10:50.177000+00:00  2018-05-15 09:15:33.270000+00:00   \n",
+       "3  2018-05-15 09:11:28.089000+00:00  2018-05-15 09:15:34.746000+00:00   \n",
+       "4  2018-05-15 09:14:21.231000+00:00  2018-05-15 09:15:32.835000+00:00   \n",
        "\n",
-       "  duration start_station_id         start_station_name  \\\n",
-       "0      337              401               Schous plass   \n",
-       "1      101              556                Pilestredet   \n",
-       "2      320              561                 Kirkeveien   \n",
-       "3      121              393  Hans Nielsen Hauges plass   \n",
-       "4      282              597                Fredensborg   \n",
+       "  duration start_station_id start_station_name start_station_description  \\\n",
+       "0      169               28                NaN                             \n",
+       "1      163               28                NaN                             \n",
+       "2      283               35                NaN                             \n",
+       "3      246               35                NaN                             \n",
+       "4       71               35                NaN                             \n",
        "\n",
-       "         start_station_description start_station_latitude  \\\n",
-       "0     nærmest Thorvald Meyers gate              59.920259   \n",
-       "1                 ved Sporveisgata              59.926224   \n",
-       "2           nord for Gørbitz' gate              59.933558   \n",
-       "3  Mellom Åsengata og Nordkappgata              59.939244   \n",
-       "4                ved rundkjøringen              59.920995   \n",
+       "  start_station_latitude start_station_longitude end_station_id  \\\n",
+       "0              63.430457               10.398101             35   \n",
+       "1              63.430457               10.398101             35   \n",
+       "2              63.432504               10.400387             66   \n",
+       "3              63.432504               10.400387             66   \n",
+       "4              63.432504               10.400387             35   \n",
        "\n",
-       "  start_station_longitude end_station_id           end_station_name  \\\n",
-       "0               10.760629            381             Grønlands torg   \n",
-       "1               10.729625            556                Pilestredet   \n",
-       "2               10.726426            471                 Marienlyst   \n",
-       "3               10.774319            393  Hans Nielsen Hauges plass   \n",
-       "4               10.750358            557                  Akersgata   \n",
+       "  end_station_name end_station_description end_station_latitude  \\\n",
+       "0              NaN                                    63.432504   \n",
+       "1              NaN                                    63.432504   \n",
+       "2              NaN                                    63.435277   \n",
+       "3              NaN                                    63.435277   \n",
+       "4              NaN                                    63.432504   \n",
        "\n",
-       "           end_station_description end_station_latitude end_station_longitude  \\\n",
-       "0                  ved Tøyenbekken             59.91252              10.76224   \n",
-       "1                 ved Sporveisgata            59.926224             10.729625   \n",
-       "2                     i Suhms gate            59.932454             10.721769   \n",
-       "3  Mellom Åsengata og Nordkappgata            59.939244             10.774319   \n",
-       "4                      ved Grensen            59.914197             10.742883   \n",
-       "\n",
-       "              started_at_dt               ended_at_dt  \n",
-       "0 2019-04-03 00:18:47+02:00 2019-04-03 00:24:25+02:00  \n",
-       "1 2019-04-03 00:25:54+02:00 2019-04-03 00:27:36+02:00  \n",
-       "2 2019-04-03 00:26:39+02:00 2019-04-03 00:31:59+02:00  \n",
-       "3 2019-04-03 05:09:58+02:00 2019-04-03 05:12:00+02:00  \n",
-       "4 2019-04-03 05:10:02+02:00 2019-04-03 05:14:44+02:00  "
+       "  end_station_longitude             started_at_dt               ended_at_dt  \n",
+       "0             10.400387 2018-05-15 11:07:43+02:00 2018-05-15 11:10:33+02:00  \n",
+       "1             10.400387 2018-05-15 11:07:51+02:00 2018-05-15 11:10:34+02:00  \n",
+       "2             10.405814 2018-05-15 11:10:50+02:00 2018-05-15 11:15:33+02:00  \n",
+       "3             10.405814 2018-05-15 11:11:28+02:00 2018-05-15 11:15:34+02:00  \n",
+       "4             10.400387 2018-05-15 11:14:21+02:00 2018-05-15 11:15:32+02:00  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,6 +289,115 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "04db5326",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_start_stations = df[['start_station_id',\n",
+    "                        'start_station_name',\n",
+    "                           'start_station_description', \n",
+    "                           'start_station_latitude', \n",
+    "                           'start_station_longitude']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "c1d722d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_start_stations = df_start_stations.drop_duplicates(subset=['start_station_id'],\n",
+    "                                                     keep='last')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "7ae3e988",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(75, 5)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_start_stations.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "070f5412",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_start_stations = df_start_stations.rename(columns={'start_station_id': 'station_id',\n",
+    "                                                     'start_station_name': 'station_name',\n",
+    "                                                     'start_station_description': 'station_description',\n",
+    "                                                     'start_station_latitude': 'station_latitude',\n",
+    "                                                     'start_station_longitude': 'station_longitude'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "4a89d0c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_start_stations.to_csv(f'./data/{city_name}_stations.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "2a4c30f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[['started_at_dt', 'ended_at_dt', 'duration', 'start_station_id', 'end_station_id']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "b3e94123",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(781422, 5)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3904f013",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "9587be11",
    "metadata": {},
@@ -304,29 +409,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 53,
    "id": "9f9a65a1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_duration_ouliers = df[df['duration'] > 24 * 60 * 60]\n",
-    "df = df.drop(df[df['duration'] > 24 * 60 * 60].index)"
+    "df_duration_outliers = df[df['duration'] > 24 * 60 * 60]\n",
+    "df = df[df['duration'] <= 24 * 60 * 60]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "8cf47b3e",
+   "execution_count": 54,
+   "id": "f152087f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17.072633028030396"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# df.to_csv('1.csv')"
+    "start = time.time()\n",
+    "df.to_csv(f'./data/{city_name}_clear_rides_data.csv', index=False)\n",
+    "end = time.time()\n",
+    "end - start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "91dd3dc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.007395029067993164"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "start = time.time()\n",
+    "df_duration_outliers.to_csv(f'./data/{city_name}_duration_outliers-stolen_bikes.csv', index=False)\n",
+    "end = time.time()\n",
+    "end - start"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fa09082",
+   "id": "faee4583",
    "metadata": {},
    "outputs": [],
    "source": []
