--- a/transform_raw_data.ipynb
+++ b/transform_raw_data.ipynb
@@ -28,15 +28,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 56,
    "id": "cc3750e8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_name = 'trondheim'        # можливі варіанти: olso, bergen, trondheim\n",
+    "city_name = 'oslo'        # можливі варіанти: olso, bergen, trondheim\n",
     "\n",
-    "start_month = 5           # 1 - 12\n",
-    "start_year = 2018         # 2019 - 2022\n",
+    "start_month = 4           # 1 - 12\n",
+    "start_year = 2019         # 2019 - 2022\n",
     "\n",
     "end_month = 6             # 1 - 12\n",
     "end_year = 2022           # 2019 - 2022\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 57,
    "id": "f9d9316b",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 58,
    "id": "ab949bad",
    "metadata": {},
    "outputs": [
@@ -69,9 +69,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Зчитування:  6.321700096130371 с. \n",
+      "Зчитування:  48.43748593330383 с. \n",
       "\n",
-      "Розмір початкової таблиці:  (781422, 13)\n"
+      "Розмір початкової таблиці:  (5833647, 13)\n"
      ]
     }
    ],
@@ -90,192 +90,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "63733820",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Трансформування:  34.44571495056152 с.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>started_at</th>\n",
-       "      <th>ended_at</th>\n",
-       "      <th>duration</th>\n",
-       "      <th>start_station_id</th>\n",
-       "      <th>start_station_name</th>\n",
-       "      <th>start_station_description</th>\n",
-       "      <th>start_station_latitude</th>\n",
-       "      <th>start_station_longitude</th>\n",
-       "      <th>end_station_id</th>\n",
-       "      <th>end_station_name</th>\n",
-       "      <th>end_station_description</th>\n",
-       "      <th>end_station_latitude</th>\n",
-       "      <th>end_station_longitude</th>\n",
-       "      <th>started_at_dt</th>\n",
-       "      <th>ended_at_dt</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2018-05-15 09:07:43.961000+00:00</td>\n",
-       "      <td>2018-05-15 09:10:33.267000+00:00</td>\n",
-       "      <td>169</td>\n",
-       "      <td>28</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td></td>\n",
-       "      <td>63.430457</td>\n",
-       "      <td>10.398101</td>\n",
-       "      <td>35</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td></td>\n",
-       "      <td>63.432504</td>\n",
-       "      <td>10.400387</td>\n",
-       "      <td>2018-05-15 11:07:43+02:00</td>\n",
-       "      <td>2018-05-15 11:10:33+02:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2018-05-15 09:07:51.044000+00:00</td>\n",
-       "      <td>2018-05-15 09:10:34.085000+00:00</td>\n",
-       "      <td>163</td>\n",
-       "      <td>28</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td></td>\n",
-       "      <td>63.430457</td>\n",
-       "      <td>10.398101</td>\n",
-       "      <td>35</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td></td>\n",
-       "      <td>63.432504</td>\n",
-       "      <td>10.400387</td>\n",
-       "      <td>2018-05-15 11:07:51+02:00</td>\n",
-       "      <td>2018-05-15 11:10:34+02:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2018-05-15 09:10:50.177000+00:00</td>\n",
-       "      <td>2018-05-15 09:15:33.270000+00:00</td>\n",
-       "      <td>283</td>\n",
-       "      <td>35</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td></td>\n",
-       "      <td>63.432504</td>\n",
-       "      <td>10.400387</td>\n",
-       "      <td>66</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td></td>\n",
-       "      <td>63.435277</td>\n",
-       "      <td>10.405814</td>\n",
-       "      <td>2018-05-15 11:10:50+02:00</td>\n",
-       "      <td>2018-05-15 11:15:33+02:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2018-05-15 09:11:28.089000+00:00</td>\n",
-       "      <td>2018-05-15 09:15:34.746000+00:00</td>\n",
-       "      <td>246</td>\n",
-       "      <td>35</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td></td>\n",
-       "      <td>63.432504</td>\n",
-       "      <td>10.400387</td>\n",
-       "      <td>66</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td></td>\n",
-       "      <td>63.435277</td>\n",
-       "      <td>10.405814</td>\n",
-       "      <td>2018-05-15 11:11:28+02:00</td>\n",
-       "      <td>2018-05-15 11:15:34+02:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2018-05-15 09:14:21.231000+00:00</td>\n",
-       "      <td>2018-05-15 09:15:32.835000+00:00</td>\n",
-       "      <td>71</td>\n",
-       "      <td>35</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td></td>\n",
-       "      <td>63.432504</td>\n",
-       "      <td>10.400387</td>\n",
-       "      <td>35</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td></td>\n",
-       "      <td>63.432504</td>\n",
-       "      <td>10.400387</td>\n",
-       "      <td>2018-05-15 11:14:21+02:00</td>\n",
-       "      <td>2018-05-15 11:15:32+02:00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                         started_at                          ended_at  \\\n",
-       "0  2018-05-15 09:07:43.961000+00:00  2018-05-15 09:10:33.267000+00:00   \n",
-       "1  2018-05-15 09:07:51.044000+00:00  2018-05-15 09:10:34.085000+00:00   \n",
-       "2  2018-05-15 09:10:50.177000+00:00  2018-05-15 09:15:33.270000+00:00   \n",
-       "3  2018-05-15 09:11:28.089000+00:00  2018-05-15 09:15:34.746000+00:00   \n",
-       "4  2018-05-15 09:14:21.231000+00:00  2018-05-15 09:15:32.835000+00:00   \n",
-       "\n",
-       "  duration start_station_id start_station_name start_station_description  \\\n",
-       "0      169               28                NaN                             \n",
-       "1      163               28                NaN                             \n",
-       "2      283               35                NaN                             \n",
-       "3      246               35                NaN                             \n",
-       "4       71               35                NaN                             \n",
-       "\n",
-       "  start_station_latitude start_station_longitude end_station_id  \\\n",
-       "0              63.430457               10.398101             35   \n",
-       "1              63.430457               10.398101             35   \n",
-       "2              63.432504               10.400387             66   \n",
-       "3              63.432504               10.400387             66   \n",
-       "4              63.432504               10.400387             35   \n",
-       "\n",
-       "  end_station_name end_station_description end_station_latitude  \\\n",
-       "0              NaN                                    63.432504   \n",
-       "1              NaN                                    63.432504   \n",
-       "2              NaN                                    63.435277   \n",
-       "3              NaN                                    63.435277   \n",
-       "4              NaN                                    63.432504   \n",
-       "\n",
-       "  end_station_longitude             started_at_dt               ended_at_dt  \n",
-       "0             10.400387 2018-05-15 11:07:43+02:00 2018-05-15 11:10:33+02:00  \n",
-       "1             10.400387 2018-05-15 11:07:51+02:00 2018-05-15 11:10:34+02:00  \n",
-       "2             10.405814 2018-05-15 11:10:50+02:00 2018-05-15 11:15:33+02:00  \n",
-       "3             10.405814 2018-05-15 11:11:28+02:00 2018-05-15 11:15:34+02:00  \n",
-       "4             10.400387 2018-05-15 11:14:21+02:00 2018-05-15 11:15:32+02:00  "
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "strptime_pattern = \"%Y-%m-%d %H:%M:%S%z\"\n",
     "timezone = pytz.timezone('Europe/Oslo')\n",
@@ -290,8 +108,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "04db5326",
+   "execution_count": null,
+   "id": "1ed5c9ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,8 +122,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "c1d722d9",
+   "execution_count": null,
+   "id": "38a3aa46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,29 +133,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "7ae3e988",
+   "execution_count": null,
+   "id": "7b74d7e9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(75, 5)"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_start_stations.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "070f5412",
+   "execution_count": null,
+   "id": "23a14d83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,8 +157,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "4a89d0c2",
+   "execution_count": null,
+   "id": "3ea9968a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,8 +167,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "2a4c30f3",
+   "execution_count": null,
+   "id": "d8249023",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,21 +177,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "b3e94123",
+   "execution_count": null,
+   "id": "2305226d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(781422, 5)"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.shape"
    ]
@@ -392,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3904f013",
+   "id": "5d0beea6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -409,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "9f9a65a1",
    "metadata": {},
    "outputs": [],
@@ -420,21 +216,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "f152087f",
+   "execution_count": null,
+   "id": "c2a8152d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "17.072633028030396"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "start = time.time()\n",
     "df.to_csv(f'./data/{city_name}_clear_rides_data.csv', index=False)\n",
@@ -444,21 +229,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "91dd3dc6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.007395029067993164"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "start = time.time()\n",
     "df_duration_outliers.to_csv(f'./data/{city_name}_duration_outliers-stolen_bikes.csv', index=False)\n",
@@ -469,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "faee4583",
+   "id": "3b6852c8",
    "metadata": {},
    "outputs": [],
    "source": []
