--- a/transform_raw_data.ipynb
+++ b/transform_raw_data.ipynb
@@ -28,15 +28,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 70,
    "id": "cc3750e8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_name = 'oslo'        # можливі варіанти: olso, bergen, trondheim\n",
+    "city_name = 'bergen'        # можливі варіанти: olso, bergen, trondheim\n",
     "\n",
-    "start_month = 4           # 1 - 12\n",
-    "start_year = 2019         # 2019 - 2022\n",
+    "start_month = 6           # 1 - 12\n",
+    "start_year = 2018         # 2019 - 2022\n",
     "\n",
     "end_month = 6             # 1 - 12\n",
     "end_year = 2022           # 2019 - 2022\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 71,
    "id": "f9d9316b",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 72,
    "id": "ab949bad",
    "metadata": {},
    "outputs": [
@@ -69,9 +69,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Зчитування:  48.43748593330383 с. \n",
+      "Зчитування:  22.00294589996338 с. \n",
       "\n",
-      "Розмір початкової таблиці:  (5833647, 13)\n"
+      "Розмір початкової таблиці:  (3035172, 13)\n"
      ]
     }
    ],
@@ -90,10 +90,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "63733820",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Трансформування:  141.32524514198303 с.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>started_at</th>\n",
+       "      <th>ended_at</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>start_station_id</th>\n",
+       "      <th>start_station_name</th>\n",
+       "      <th>start_station_description</th>\n",
+       "      <th>start_station_latitude</th>\n",
+       "      <th>start_station_longitude</th>\n",
+       "      <th>end_station_id</th>\n",
+       "      <th>end_station_name</th>\n",
+       "      <th>end_station_description</th>\n",
+       "      <th>end_station_latitude</th>\n",
+       "      <th>end_station_longitude</th>\n",
+       "      <th>started_at_dt</th>\n",
+       "      <th>ended_at_dt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-06-29 10:45:12.736000+00:00</td>\n",
+       "      <td>2018-06-29 11:05:10.430000+00:00</td>\n",
+       "      <td>1197</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Grieghallen</td>\n",
+       "      <td></td>\n",
+       "      <td>60.388167</td>\n",
+       "      <td>5.328335</td>\n",
+       "      <td>83</td>\n",
+       "      <td>Bergen jernbanestasjon</td>\n",
+       "      <td></td>\n",
+       "      <td>60.390324</td>\n",
+       "      <td>5.332440</td>\n",
+       "      <td>2018-06-29 12:45:12+02:00</td>\n",
+       "      <td>2018-06-29 13:05:10+02:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-06-29 10:53:59.691000+00:00</td>\n",
+       "      <td>2018-06-29 11:11:28.184000+00:00</td>\n",
+       "      <td>1048</td>\n",
+       "      <td>49</td>\n",
+       "      <td>Studentsenteret UIB</td>\n",
+       "      <td></td>\n",
+       "      <td>60.387198</td>\n",
+       "      <td>5.322980</td>\n",
+       "      <td>75</td>\n",
+       "      <td>Akvariet</td>\n",
+       "      <td></td>\n",
+       "      <td>60.399877</td>\n",
+       "      <td>5.304686</td>\n",
+       "      <td>2018-06-29 12:53:59+02:00</td>\n",
+       "      <td>2018-06-29 13:11:28+02:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-06-29 11:01:02.987000+00:00</td>\n",
+       "      <td>2018-06-29 11:09:13.172000+00:00</td>\n",
+       "      <td>490</td>\n",
+       "      <td>58</td>\n",
+       "      <td>Tårnplass</td>\n",
+       "      <td></td>\n",
+       "      <td>60.393755</td>\n",
+       "      <td>5.321792</td>\n",
+       "      <td>157</td>\n",
+       "      <td>Høyteknologisenteret</td>\n",
+       "      <td>Høyteknologisenteret</td>\n",
+       "      <td>60.382255</td>\n",
+       "      <td>5.332332</td>\n",
+       "      <td>2018-06-29 13:01:02+02:00</td>\n",
+       "      <td>2018-06-29 13:09:13+02:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-06-29 11:30:33.362000+00:00</td>\n",
+       "      <td>2018-06-29 11:38:32.276000+00:00</td>\n",
+       "      <td>478</td>\n",
+       "      <td>157</td>\n",
+       "      <td>Høyteknologisenteret</td>\n",
+       "      <td>Høyteknologisenteret</td>\n",
+       "      <td>60.382255</td>\n",
+       "      <td>5.332332</td>\n",
+       "      <td>83</td>\n",
+       "      <td>Bergen jernbanestasjon</td>\n",
+       "      <td></td>\n",
+       "      <td>60.390324</td>\n",
+       "      <td>5.332440</td>\n",
+       "      <td>2018-06-29 13:30:33+02:00</td>\n",
+       "      <td>2018-06-29 13:38:32+02:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-06-29 11:40:44.376000+00:00</td>\n",
+       "      <td>2018-06-29 12:10:23.766000+00:00</td>\n",
+       "      <td>1779</td>\n",
+       "      <td>58</td>\n",
+       "      <td>Tårnplass</td>\n",
+       "      <td></td>\n",
+       "      <td>60.393755</td>\n",
+       "      <td>5.321792</td>\n",
+       "      <td>116</td>\n",
+       "      <td>Lysverket</td>\n",
+       "      <td>Gamle lysverket, ved KODE</td>\n",
+       "      <td>60.389543</td>\n",
+       "      <td>5.329622</td>\n",
+       "      <td>2018-06-29 13:40:44+02:00</td>\n",
+       "      <td>2018-06-29 14:10:23+02:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         started_at                          ended_at  \\\n",
+       "0  2018-06-29 10:45:12.736000+00:00  2018-06-29 11:05:10.430000+00:00   \n",
+       "1  2018-06-29 10:53:59.691000+00:00  2018-06-29 11:11:28.184000+00:00   \n",
+       "2  2018-06-29 11:01:02.987000+00:00  2018-06-29 11:09:13.172000+00:00   \n",
+       "3  2018-06-29 11:30:33.362000+00:00  2018-06-29 11:38:32.276000+00:00   \n",
+       "4  2018-06-29 11:40:44.376000+00:00  2018-06-29 12:10:23.766000+00:00   \n",
+       "\n",
+       "   duration  start_station_id    start_station_name start_station_description  \\\n",
+       "0      1197                 3           Grieghallen                             \n",
+       "1      1048                49   Studentsenteret UIB                             \n",
+       "2       490                58             Tårnplass                             \n",
+       "3       478               157  Høyteknologisenteret      Høyteknologisenteret   \n",
+       "4      1779                58             Tårnplass                             \n",
+       "\n",
+       "   start_station_latitude  start_station_longitude  end_station_id  \\\n",
+       "0               60.388167                 5.328335              83   \n",
+       "1               60.387198                 5.322980              75   \n",
+       "2               60.393755                 5.321792             157   \n",
+       "3               60.382255                 5.332332              83   \n",
+       "4               60.393755                 5.321792             116   \n",
+       "\n",
+       "         end_station_name    end_station_description  end_station_latitude  \\\n",
+       "0  Bergen jernbanestasjon                                        60.390324   \n",
+       "1                Akvariet                                        60.399877   \n",
+       "2    Høyteknologisenteret       Høyteknologisenteret             60.382255   \n",
+       "3  Bergen jernbanestasjon                                        60.390324   \n",
+       "4               Lysverket  Gamle lysverket, ved KODE             60.389543   \n",
+       "\n",
+       "   end_station_longitude             started_at_dt               ended_at_dt  \n",
+       "0               5.332440 2018-06-29 12:45:12+02:00 2018-06-29 13:05:10+02:00  \n",
+       "1               5.304686 2018-06-29 12:53:59+02:00 2018-06-29 13:11:28+02:00  \n",
+       "2               5.332332 2018-06-29 13:01:02+02:00 2018-06-29 13:09:13+02:00  \n",
+       "3               5.332440 2018-06-29 13:30:33+02:00 2018-06-29 13:38:32+02:00  \n",
+       "4               5.329622 2018-06-29 13:40:44+02:00 2018-06-29 14:10:23+02:00  "
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "strptime_pattern = \"%Y-%m-%d %H:%M:%S%z\"\n",
     "timezone = pytz.timezone('Europe/Oslo')\n",
@@ -108,8 +290,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1ed5c9ce",
+   "execution_count": 74,
+   "id": "87cffe8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,8 +304,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "38a3aa46",
+   "execution_count": 75,
+   "id": "10af5a56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,18 +315,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7b74d7e9",
+   "execution_count": 76,
+   "id": "f02bad22",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(115, 5)"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_start_stations.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "23a14d83",
+   "execution_count": 77,
+   "id": "31a7e917",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,8 +350,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3ea9968a",
+   "execution_count": 78,
+   "id": "59c73c5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,8 +360,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d8249023",
+   "execution_count": 79,
+   "id": "7c74e6d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,10 +370,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2305226d",
+   "execution_count": 80,
+   "id": "d891a40d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3035172, 5)"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.shape"
    ]
@@ -188,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d0beea6",
+   "id": "07f7f9ab",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -205,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "9f9a65a1",
    "metadata": {},
    "outputs": [],
@@ -216,10 +420,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c2a8152d",
+   "execution_count": 82,
+   "id": "02083c2c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "68.05525207519531"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "start = time.time()\n",
     "df.to_csv(f'./data/{city_name}_clear_rides_data.csv', index=False)\n",
@@ -229,10 +444,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "id": "91dd3dc6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.016646862030029297"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "start = time.time()\n",
     "df_duration_outliers.to_csv(f'./data/{city_name}_duration_outliers-stolen_bikes.csv', index=False)\n",
@@ -243,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b6852c8",
+   "id": "04b82de0",
    "metadata": {},
    "outputs": [],
    "source": []
