--- a/transform_raw_data.ipynb
+++ b/transform_raw_data.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "670b43b4",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "id": "cc3750e8",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "id": "f9d9316b",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "id": "ab949bad",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Зчитування:  22.00294589996338 с. \n",
+      "Зчитування:  21.169935941696167 с. \n",
       "\n",
       "Розмір початкової таблиці:  (3035172, 13)\n"
      ]
@@ -90,7 +90,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
+   "id": "32f69e8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(715, 13)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[(df['duration'] > 6 * 60 * 60) & (df['duration'] <= 24 * 60 * 60)].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73fb5cf0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "63733820",
    "metadata": {},
    "outputs": [
@@ -98,7 +127,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Трансформування:  141.32524514198303 с.\n"
+      "Трансформування:  0.03181004524230957 с.\n"
      ]
     },
     {
@@ -271,7 +300,7 @@
        "4               5.329622 2018-06-29 13:40:44+02:00 2018-06-29 14:10:23+02:00  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +319,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 11,
+   "id": "f5ad4ab3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>started_at</th>\n",
+       "      <th>ended_at</th>\n",
+       "      <th>started_at_dt</th>\n",
+       "      <th>ended_at_dt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-06-29 10:45:12.736000+00:00</td>\n",
+       "      <td>2018-06-29 11:05:10.430000+00:00</td>\n",
+       "      <td>2018-06-29 12:45:12+02:00</td>\n",
+       "      <td>2018-06-29 13:05:10+02:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-06-29 10:53:59.691000+00:00</td>\n",
+       "      <td>2018-06-29 11:11:28.184000+00:00</td>\n",
+       "      <td>2018-06-29 12:53:59+02:00</td>\n",
+       "      <td>2018-06-29 13:11:28+02:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-06-29 11:01:02.987000+00:00</td>\n",
+       "      <td>2018-06-29 11:09:13.172000+00:00</td>\n",
+       "      <td>2018-06-29 13:01:02+02:00</td>\n",
+       "      <td>2018-06-29 13:09:13+02:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-06-29 11:30:33.362000+00:00</td>\n",
+       "      <td>2018-06-29 11:38:32.276000+00:00</td>\n",
+       "      <td>2018-06-29 13:30:33+02:00</td>\n",
+       "      <td>2018-06-29 13:38:32+02:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-06-29 11:40:44.376000+00:00</td>\n",
+       "      <td>2018-06-29 12:10:23.766000+00:00</td>\n",
+       "      <td>2018-06-29 13:40:44+02:00</td>\n",
+       "      <td>2018-06-29 14:10:23+02:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         started_at                          ended_at  \\\n",
+       "0  2018-06-29 10:45:12.736000+00:00  2018-06-29 11:05:10.430000+00:00   \n",
+       "1  2018-06-29 10:53:59.691000+00:00  2018-06-29 11:11:28.184000+00:00   \n",
+       "2  2018-06-29 11:01:02.987000+00:00  2018-06-29 11:09:13.172000+00:00   \n",
+       "3  2018-06-29 11:30:33.362000+00:00  2018-06-29 11:38:32.276000+00:00   \n",
+       "4  2018-06-29 11:40:44.376000+00:00  2018-06-29 12:10:23.766000+00:00   \n",
+       "\n",
+       "              started_at_dt               ended_at_dt  \n",
+       "0 2018-06-29 12:45:12+02:00 2018-06-29 13:05:10+02:00  \n",
+       "1 2018-06-29 12:53:59+02:00 2018-06-29 13:11:28+02:00  \n",
+       "2 2018-06-29 13:01:02+02:00 2018-06-29 13:09:13+02:00  \n",
+       "3 2018-06-29 13:30:33+02:00 2018-06-29 13:38:32+02:00  \n",
+       "4 2018-06-29 13:40:44+02:00 2018-06-29 14:10:23+02:00  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['started_at', 'ended_at', 'started_at_dt', 'ended_at_dt']].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "87cffe8a",
    "metadata": {},
    "outputs": [],
@@ -300,6 +427,250 @@
     "                           'start_station_description', \n",
     "                           'start_station_latitude', \n",
     "                           'start_station_longitude']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "fb4bdaaf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = df_start_stations.drop_duplicates(subset=['start_station_id', 'start_station_name',\n",
+    "                           'start_station_description', \n",
+    "                           'start_station_latitude', \n",
+    "                           'start_station_longitude'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "7bcf7e31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.to_excel('1.xlsx', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "9437e642",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>start_station_id</th>\n",
+       "      <th>start_station_name</th>\n",
+       "      <th>start_station_description</th>\n",
+       "      <th>start_station_latitude</th>\n",
+       "      <th>start_station_longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>444</th>\n",
+       "      <td>449</td>\n",
+       "      <td>Ruseløkkgården</td>\n",
+       "      <td>langs Løkkeveien</td>\n",
+       "      <td>59.913499</td>\n",
+       "      <td>10.72656</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>276</th>\n",
+       "      <td>449</td>\n",
+       "      <td>Ruseløkkgården</td>\n",
+       "      <td>langs Løkkeveien</td>\n",
+       "      <td>59.913575</td>\n",
+       "      <td>10.72623</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000</th>\n",
+       "      <td>451</td>\n",
+       "      <td>Suhms gate</td>\n",
+       "      <td>mellom Schultz' gate og Industrigata</td>\n",
+       "      <td>59.929419</td>\n",
+       "      <td>10.726195</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>451</td>\n",
+       "      <td>Suhms gate</td>\n",
+       "      <td>ved Oslo døvekirke</td>\n",
+       "      <td>59.929419</td>\n",
+       "      <td>10.726195</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36678</th>\n",
+       "      <td>451</td>\n",
+       "      <td>Suhms gate</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>59.929419</td>\n",
+       "      <td>10.726195</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      start_station_id start_station_name  \\\n",
+       "444                449     Ruseløkkgården   \n",
+       "276                449     Ruseløkkgården   \n",
+       "2000               451         Suhms gate   \n",
+       "30                 451         Suhms gate   \n",
+       "36678              451         Suhms gate   \n",
+       "\n",
+       "                  start_station_description start_station_latitude  \\\n",
+       "444                        langs Løkkeveien              59.913499   \n",
+       "276                        langs Løkkeveien              59.913575   \n",
+       "2000   mellom Schultz' gate og Industrigata              59.929419   \n",
+       "30                       ved Oslo døvekirke              59.929419   \n",
+       "36678                                   NaN              59.929419   \n",
+       "\n",
+       "      start_station_longitude  \n",
+       "444                  10.72656  \n",
+       "276                  10.72623  \n",
+       "2000                10.726195  \n",
+       "30                  10.726195  \n",
+       "36678               10.726195  "
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[a['start_station_id'].isin([449,451])].sort_values(by='start_station_id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "4e619a1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>started_at</th>\n",
+       "      <th>ended_at</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>start_station_id</th>\n",
+       "      <th>start_station_name</th>\n",
+       "      <th>start_station_description</th>\n",
+       "      <th>start_station_latitude</th>\n",
+       "      <th>start_station_longitude</th>\n",
+       "      <th>end_station_id</th>\n",
+       "      <th>end_station_name</th>\n",
+       "      <th>end_station_description</th>\n",
+       "      <th>end_station_latitude</th>\n",
+       "      <th>end_station_longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>107381</th>\n",
+       "      <td>2020-06-12 22:58:29.631000+00:00</td>\n",
+       "      <td>2020-09-21 11:40:40.126000+00:00</td>\n",
+       "      <td>8685730</td>\n",
+       "      <td>424</td>\n",
+       "      <td>Birkelunden</td>\n",
+       "      <td>langs Seilduksgata</td>\n",
+       "      <td>59.925611</td>\n",
+       "      <td>10.760926</td>\n",
+       "      <td>489</td>\n",
+       "      <td>Torggata</td>\n",
+       "      <td>ved Bernt Ankers gate</td>\n",
+       "      <td>59.915983</td>\n",
+       "      <td>10.751551</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              started_at                          ended_at  \\\n",
+       "107381  2020-06-12 22:58:29.631000+00:00  2020-09-21 11:40:40.126000+00:00   \n",
+       "\n",
+       "       duration start_station_id start_station_name start_station_description  \\\n",
+       "107381  8685730              424        Birkelunden        langs Seilduksgata   \n",
+       "\n",
+       "       start_station_latitude start_station_longitude end_station_id  \\\n",
+       "107381              59.925611               10.760926            489   \n",
+       "\n",
+       "       end_station_name end_station_description end_station_latitude  \\\n",
+       "107381         Torggata   ved Bernt Ankers gate            59.915983   \n",
+       "\n",
+       "       end_station_longitude  \n",
+       "107381             10.751551  "
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sort_values(by='duration').tail(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "47e382a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100.5292824074074"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "8685730 / 60 / 60 / 24"
    ]
   },
   {
@@ -491,7 +862,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
